--- a/project_1/conv_net2.ipynb
+++ b/project_1/conv_net2.ipynb
@@ -26,47 +26,7 @@
     "from torch.nn import functional as F\n",
     "from torch.optim.lr_scheduler import StepLR\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "IywA-9e2ADaO",
-    "outputId": "41501795-b6c2-40c0-ec29-09211fe8031f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "3jxszVuaBB5X"
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('/content/drive/My Drive')\n",
+    "%matplotlib inline\n",
     "import dlc_practical_prologue as prolog"
    ]
   },
@@ -2246,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -3000,37 +2960,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.108749999999999"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(9.09 + 9.22 + 9.22 + 9.01 + 9.09 + 9.15 + 9.11 + 8.98)/8"
+    "class bigConvNet_3(nn.Module):\n",
+    "    def __init__(self, nb_hidden, dp1, dp2):\n",
+    "        super(bigConvNet_3, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels = 1, out_channels = 100, kernel_size=2)\n",
+    "        self.conv2 = nn.Conv2d(100, 200, kernel_size=2, stride = 1)\n",
+    "        self.fc1 = nn.Linear(4*200, nb_hidden)\n",
+    "        self.fc2 = nn.Linear(nb_hidden, 10)\n",
+    "        self.dropout1 = nn.Dropout2d(dp1)\n",
+    "        self.dropout2 = nn.Dropout2d(dp2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(F.max_pool2d(self.conv1(x), (2, 2)))\n",
+    "        x = self.dropout1(x)\n",
+    "        x = F.relu(F.max_pool2d(self.conv2(x), 2))\n",
+    "        x = x.view(-1, 4*200)\n",
+    "        x = self.dropout1(x)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.dropout2(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Siamese(nn.Module):\n",
     "    \n",
-    "    def __init__(self, input_dim=14*14, intermediate_dim=10, output_dim=2, hidden_dim=256):\n",
+    "    def __init__(self, comparison):\n",
     "        super(Siamese, self).__init__()\n",
-    "        self.model = nn.Sequential(nn.Linear(input_dim, 1024), nn.ReLU(), nn.Linear(1024, intermediate_dim))\n",
-    "        self.comparison = nn.Sequential(nn.Linear(intermediate_dim, hidden_dim), nn.ReLU(),\\\n",
-    "                                        nn.Linear(hidden_dim, output_dim))\n",
+    "        self.model = bigConvNet_3(500, 0.0, 0.25)\n",
+    "        self.comparison = comparison\n",
     "        \n",
     "    def forward1(self, x):\n",
     "        mid = self.model(x)\n",
@@ -3040,6 +3007,152 @@
     "        mid = mid1 - mid2\n",
     "        out = self.comparison(mid)\n",
     "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_siamese_model(siamese, train_input, train_target, train_classes, test_input, test_target,\\\n",
+    "                       test_classes, epochs=100 , batch_size=100, lr=0.08, alpha=0.5):\n",
+    "    \n",
+    "    \n",
+    "    torch.nn.init.xavier_uniform_(siamese.model.conv1.weight)\n",
+    "    torch.nn.init.xavier_uniform_(siamese.model.conv2.weight)\n",
+    "    torch.nn.init.xavier_uniform_(siamese.model.fc1.weight)\n",
+    "    torch.nn.init.xavier_uniform_(siamese.model.fc2.weight)\n",
+    "    \n",
+    "    for i in range(0, len(siamese.comparison), 2):\n",
+    "        torch.nn.init.xavier_uniform_(siamese.comparison[i].weight)\n",
+    "        \n",
+    "    optimizer = torch.optim.Adam(siamese.parameters())\n",
+    "    train_loss = []\n",
+    "    test_loss = []\n",
+    "    test_accuracy = []\n",
+    "    best_accuracy = 0\n",
+    "    best_epoch = 0\n",
+    "    \n",
+    "    for i in range(epochs):\n",
+    "        for b in range(0, train_input.size(0), batch_size):\n",
+    "            output1 = siamese.forward1(train_input.narrow(0, b, batch_size)[:,0,:,:].unsqueeze(dim=1))\n",
+    "            output2 = siamese.forward1(train_input.narrow(0, b, batch_size)[:,1,:,:].unsqueeze(dim=1))\n",
+    "            criterion = torch.nn.CrossEntropyLoss()\n",
+    "            loss1 = criterion(output1, train_classes.narrow(0, b, batch_size)[:,0])\n",
+    "            loss2 = criterion(output2, train_classes.narrow(0, b, batch_size)[:,1])\n",
+    "            output3 = siamese.forward2(output1, output2)\n",
+    "            loss3 = criterion(output3, train_target.narrow(0, b, batch_size))\n",
+    "            loss = alpha*(loss1 + loss2) + (1 - alpha)*loss3\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "        \n",
+    "        mid_train1 = siamese.forward1(train_input[:,0,:,:].unsqueeze(dim=1))\n",
+    "        train_loss1 = criterion(mid_train1, train_classes[:,0])\n",
+    "        mid_train2 = siamese.forward1(train_input[:,1,:,:].unsqueeze(dim=1))\n",
+    "        train_loss2 = criterion(mid_train2, train_classes[:,1])\n",
+    "        output_train = siamese.forward2(mid_train1, mid_train2)\n",
+    "        train_loss3 = criterion(output_train, train_target)\n",
+    "        \n",
+    "        mid_test1 = siamese.forward1(test_input[:,0,:,:].unsqueeze(dim=1))\n",
+    "        test_loss1 = criterion(mid_test1, test_classes[:,0])\n",
+    "        mid_test2 = siamese.forward1(test_input[:,1,:,:].unsqueeze(dim=1))\n",
+    "        test_loss2 = criterion(mid_test2, train_classes[:,1])\n",
+    "        output_test = siamese.forward2(mid_test1, mid_test2)\n",
+    "        test_loss3 = criterion(output_test, test_target)\n",
+    "\n",
+    "        train_loss.append(alpha*(train_loss1 + train_loss2) + (1 - alpha)*train_loss3)\n",
+    "        test_loss.append(alpha*(test_loss1 + test_loss2) + (1 - alpha)*test_loss3)\n",
+    "        accuracy = 1 - nb_errors(output_test, test_target) / 1000\n",
+    "\n",
+    "        if accuracy > best_accuracy:\n",
+    "            best_accuracy = accuracy\n",
+    "            best_epoch = i+1\n",
+    "        test_accuracy.append(accuracy)\n",
+    "       \n",
+    "    return train_loss, test_loss, test_accuracy, best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intermediate_dim = 10\n",
+    "output_dim = 2\n",
+    "\n",
+    "siamese1 = Siamese(nn.Sequential(nn.Linear(intermediate_dim, 32), nn.ReLU(), nn.Linear(32, output_dim)))\n",
+    "siamese2 = Siamese(nn.Sequential(nn.Linear(intermediate_dim, 512), nn.ReLU(), nn.Linear(512, output_dim)))\n",
+    "siamese3 = Siamese(nn.Sequential(nn.Linear(intermediate_dim, 128), nn.ReLU(), nn.Linear(128, 128), nn.ReLU(),\\\n",
+    "                            nn.Linear(128, output_dim)))\n",
+    "siamese4 = Siamese(nn.Sequential(nn.Linear(intermediate_dim, 1500), nn.ReLU(), nn.Linear(1500, output_dim)))\n",
+    "siamese5 = Siamese(nn.Sequential(nn.Linear(intermediate_dim, 512), nn.ReLU(), nn.Linear(512, 512),\\\n",
+    "                                               nn.ReLU(), nn.Linear(512, output_dim)))\n",
+    "\n",
+    "siameses = [siamese1, siamese2, siamese3, siamese4, siamese5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies = torch.empty(5, 10, dtype=torch.float)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)\n",
+    "    for j in range(5):\n",
+    "        _, _, _, best_accuracy = train_siamese_model(siameses[j], train_input, train_target, train_classes, \\\n",
+    "                                                     test_input, test_target, test_classes)\n",
+    "        accuracies[j][i] = best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies.std(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies.median(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies.max(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies.min(1)"
    ]
   }
  ],
